<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>
    <EditText
        android:id="@+id/message_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_message"/>
    <CheckBox
        android:id="@+id/sendTitle_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_send_title"/>
    <Button
        style="@style/CodeFont"
        android:text="@string/send_email"
        android:onClick="sendEmail"/>
    <Button
        style="@style/CodeFont"
        android:id="@+id/activity_button"
        android:text="@string/launch_activity"
        android:onClick="launchActivity"/>
    <Button
        style="@style/CodeFont"
        android:text="@string/launch_camera"
        android:onClick="launchCamera"/>

</LinearLayout>
</ScrollView>